--- a/src/common/styles/app.css
+++ b/src/common/styles/app.css
@@ -1,13 +1,13 @@
-@import './variables';
+@import "./variables";
 
 /* Import Vendor */
-@import 'vendor/bootstrap';
+@import "vendor/bootstrap";
 
 /* Import Base */
-@import 'base/global';
-@import 'base/fonts';
-@import 'base/states';
-@import 'base/utilities';
+@import "base/global";
+@import "base/fonts";
+@import "base/states";
+@import "base/utilities";
 
 /* Import Components */
-@import 'components/logo.component';
+@import "components/logo.component";
