--- a/src/common/styles/base/global.css
+++ b/src/common/styles/base/global.css
@@ -5,16 +5,16 @@
 
 html,
 body {
-  /* color: value($color-basic, darkest); */
-  font-family: 'OpenSans';
-  /* font-size: calc($default-font-size * 0.65); */
-  height: 100%;
-  width: 100%;
+	/* color: value($color-basic, darkest); */
+	font-family: "OpenSans";
+	/* font-size: calc($default-font-size * 0.65); */
+	height: 100%;
+	width: 100%;
 }
 
 a,
 a:active,
 a:hover,
 a:visited {
-  text-decoration: none;
+	text-decoration: none;
 }
